Don't do URI fixup on IP address literals.  Bug 62402, patch by Lorenzo Colitti <lorenzo@colitti.com>, r=adamlock, sr=darin